--- a/HMS/Views/Home/UserLogin.cshtml
+++ b/HMS/Views/Home/UserLogin.cshtml
@@ -5,12 +5,12 @@
     Layout = null;
 }
 <head>
-    <link href="~/css2/StyleSheet1.css" rel="stylesheet" />
+    <link href="~/css2/stylesheet1.css" rel="stylesheet" />
 </head>
 @using (Html.BeginForm("UserLogin", "Home", System.Web.Mvc.FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <div class="loginBox">
-        <img class="user" src="https://i.ibb.co/yVGxFPR/2.png" height="100px" width="100px">
+        <img class="user" src="https://png.pngtree.com/png-vector/20190927/ourlarge/pngtree-medicine-medical-healthcare-symbol-icon-png-image_1749292.jpg" height="100px" width="100px">
         <h3>Sign in here</h3>
         <form action="login.php" method="post">
             <div class="inputBox">
