--- a/HMS/Views/Shared/AdminLayout.cshtml
+++ b/HMS/Views/Shared/AdminLayout.cshtml
@@ -98,7 +98,7 @@
             </div>
             <div class="nalika-profile">
                 <div class="profile-dtl">
-                    <a href="#"><img src="~/img/2023-02-24.png" alt=""></a>
+                    <a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREYPTQmzNQu1xMZbc-O3BrHXiceQWSASGRwQ&usqp=CAU" alt=""></a>
                     <h2>@Session["UserName"] <span class="min-dtn"></span></h2>
                 </div>
                 <div class="profile-social-dtl">
@@ -112,7 +112,7 @@
             <div class="left-custom-menu-adp-wrap comment-scrollbar">
                 <nav class="sidebar-nav left-sidebar-menu-pro">
                     <ul class="metismenu" id="menu1">
-                        <li class="active">
+                        <li class="block">
                             <a class="has-arrow" href="index.html">
                                 <i class="icon nalika-home icon-wrap"></i>
                                 <span class="mini-click-non">Master</span>
@@ -131,7 +131,7 @@
 
                             </ul>
                         </li>
-                        <li class="active">
+                        <li class="block">
                             <a class="has-arrow" href="index.html">
                                 <i class="icon nalika-home icon-wrap"></i>
                                 <span class="mini-click-non">Purchase</span>
@@ -143,7 +143,7 @@
 
                             </ul>
                         </li>
-                        <li class="active">
+                        <li class="block">
                             <a class="has-arrow" href="index.html">
                                 <i class="icon nalika-home icon-wrap"></i>
                                 <span class="mini-click-non">Sale</span>
